## Process this file with automake to create Makefile.in.

# The name of the module.
DOC_MODULE=cairo-compmgr

# The top-level SGML file.
DOC_MAIN_SGML_FILE=cairo-compmgr-docs.xml

# Extra options to supply to gtkdoc-scan
SCAN_OPTIONS=

# The directory containing the source code. Relative to $(srcdir)
DOC_SOURCE_DIR=../../src

# Used for dependencies
HFILE_GLOB= \
    $(top_srcdir)/src/ccm.h \
    $(top_srcdir)/src/ccm-drawable.h \
    $(top_srcdir)/src/ccm-pixmap.h \
    $(top_srcdir)/src/ccm-window.h \
    $(top_srcdir)/src/ccm-window-plugin.h \
    $(top_srcdir)/src/ccm-screen.h \
    $(top_srcdir)/src/ccm-screen-plugin.h \
    $(top_srcdir)/src/ccm-display.h \
    $(top_srcdir)/src/ccm-region.h \
    $(top_srcdir)/src/ccm-keybind.h \
    $(top_srcdir)/src/ccm-image.h \
    $(top_srcdir)/src/ccm-debug.h \
    $(top_srcdir)/lib/ccm-cairo-utils.h \
    $(top_srcdir)/lib/ccm-config.h \
    $(top_srcdir)/lib/ccm-timeline.h

if HAVE_GTK
HFILE_GLOB+= \
    $(top_srcdir)/src/ccm-preferences-page.h \
    $(top_srcdir)/src/ccm-preferences-page-plugin.h
endif

CFILE_GLOB=\
    $(top_srcdir)/src/ccm-drawable.h \
    $(top_srcdir)/src/ccm-drawable.c \
    $(top_srcdir)/src/ccm-pixmap.h \
    $(top_srcdir)/src/ccm-pixmap.c \
    $(top_srcdir)/src/ccm-window.h \
    $(top_srcdir)/src/ccm-window.c \
    $(top_srcdir)/src/ccm-window-plugin.h \
    $(top_srcdir)/src/ccm-window-plugin.c \
    $(top_srcdir)/src/ccm-screen.h \
    $(top_srcdir)/src/ccm-screen.c \
    $(top_srcdir)/src/ccm-screen-plugin.h \
    $(top_srcdir)/src/ccm-screen-plugin.c \
    $(top_srcdir)/src/ccm-display.h \
    $(top_srcdir)/src/ccm-display.c \
    $(top_srcdir)/src/ccm-region.h \
    $(top_srcdir)/src/ccm-region.c \
    $(top_srcdir)/src/ccm-keybind.h \
    $(top_srcdir)/src/ccm-keybind.c \
    $(top_srcdir)/src/ccm-image.h \
    $(top_srcdir)/src/ccm-image.c \
    $(top_srcdir)/src/ccm-debug.h \
    $(top_srcdir)/src/ccm-debug.c \
    $(top_srcdir)/lib/ccm-cairo-utils.h \
    $(top_srcdir)/lib/ccm-cairo-utils.c \
    $(top_srcdir)/lib/ccm-config.h \
    $(top_srcdir)/lib/ccm-config.c \
    $(top_srcdir)/lib/ccm-timeline.h \
    $(top_srcdir)/lib/ccm-timeline.c

if HAVE_GTK
CFILE_GLOB+=\
    $(top_srcdir)/src/ccm-preferences-page.h \
    $(top_srcdir)/src/ccm-preferences-page.c \
    $(top_srcdir)/src/ccm-preferences-page-plugin.h \
    $(top_srcdir)/src/ccm-preferences-page-plugin.c
endif

UNSUPPORTED_HFILES=\
    $(top_srcdir)/src/ccm-debug.h \
    $(top_srcdir)/src/ccm-plugin.h \
    $(top_srcdir)/src/ccm-pixmap-backend.h \
    $(top_srcdir)/src/ccm-pixmap-image.h \
    $(top_srcdir)/src/ccm-pixmap-buffered-image.h \
    $(top_srcdir)/src/ccm-window-backend.h \
    $(top_srcdir)/src/ccm-watch.h \
    $(top_srcdir)/src/ccm-extension.h \
    $(top_srcdir)/src/ccm-extension-loader.h \
    $(top_srcdir)/src/ccm-property-async.h \
    $(top_srcdir)/src/ccm-tray-menu.h \
    $(top_srcdir)/src/ccm-tray-icon.h \
    $(top_srcdir)/src/ccm-preferences.h \
    $(top_srcdir)/src/ccm-cell-extension.h \
    $(top_srcdir)/src/ccm-cell-renderer-extension.h \
    $(top_srcdir)/src/ccm-pixmap-xrender.h

if HAVE_GTK
else
UNSUPPORTED_HFILES+= \
    $(top_srcdir)/src/ccm-preferences-page.h \
    $(top_srcdir)/src/ccm-preferences-page-plugin.h
endif

# Headers to ignore
IGNORE_HFILES= \
    $(UNSUPPORTED_HFILES)

# CFLAGS and LDFLAGS for compiling scan program. Only needed
# if $(DOC_MODULE).types is non-empty.
INCLUDES = -I$(top_srcdir)/src \
           -I$(top_srcdir)/lib \
           -I$(top_builddir)/build \
           -I$(top_srcdir)/build \
           $(CAIRO_COMPMGR_CFLAGS)

GTKDOC_LIBS = \
    $(CAIRO_COMPMGR_LIBS) \
    $(M_LIBS) \
    $(EDEBUG_LIBS) \
    $(top_builddir)/src/ccm*.o \
    $(top_builddir)/lib/libcairo_compmgr.la

if ENABLE_PERF_PLUGIN
GTKDOC_LIBS += $(CCM_PERF_PLUGIN_LIBS)
endif

if HAVE_XRENDER_BACKEND
GTKDOC_LIBS += $(CCM_XRENDER_BACKEND_LIBS)
endif

if ENABLE_GOBJECT_INTROSPECTION
GTKDOC_LIBS += $(CCM_GOBJECT_INTROSPECTION_LIBS)
endif

# Extra options to supply to gtkdoc-mkdb
MKDB_OPTIONS=--sgml-mode --output-format=xml

# Extra options to supply to gtkdoc-mktmpl
MKTMPL_OPTIONS=

# Non-autogenerated SGML files to be included in $(DOC_MAIN_SGML_FILE)
content_files = \
    version.xml

# Images to copy into HTML directory
HTML_IMAGES =

# Extra options to supply to gtkdoc-fixref
FIXXREF_OPTIONS=

include $(top_srcdir)/build/gtk-doc.am

# Version information for marking the documentation
EXTRA_DIST += version.xml.in


